syntax = "proto3";
package bitstars;

option go_package = "github.com/Bitstarz-eng/event-processing-challenge/internal/genproto";

message Event {
  int64 id = 1;
  int64 player_id = 2;
  int64 game_id = 3;
  string type = 4;
  int64 amount = 5;
  string currency = 6;
  bool has_won = 7;
  int64 created_at = 8;
}
